--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="social-icons-home">
           
-          <a href="www.linkedin.com/in/anushka-pawar-a07935212"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="www.linkedin.com/in/anushka-pawar92"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://github.com/Anushka-92"><i class="fa-brands fa-github"></i></a>
           <a href="https://hashnode.com/@anushka991"><i class="fa-brands fa-hashnode"></i></a>
         </div>
