--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="social-icons-home">
           
-          <a href="www.linkedin.com/in/anushka-pawar92"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/anushka-pawar92"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://github.com/Anushka-92"><i class="fa-brands fa-github"></i></a>
           <a href="https://hashnode.com/@anushka991"><i class="fa-brands fa-hashnode"></i></a>
         </div>
@@ -146,7 +146,7 @@
             </p>
             <p><i class="fa-solid fa-phone"></i>9307781766</p>
             <div class="social-icons">
-              <a href="www.linkedin.com/in/anushka-pawar-a07935212"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/anushka-pawar92"><i class="fa-brands fa-linkedin"></i></a>
               <a href="https://github.com/Anushka-92"><i class="fa-brands fa-github"></i></a>
               <a href="https://instagram.com/_nushka92?igshid=OTJhZDVkZWE="><i class="fa-brands fa-instagram"></i></a>
             </div>
