--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="https://github.com/Anushka-92"><i class="fa-brands fa-github"></i></a>
           <a href="https://hashnode.com/@anushka991"><i class="fa-brands fa-hashnode"></i></a>
         </div>
-        <a href="abp_2.pdf" download class="btn btn2-home"
+        <a href="Images/abp_2.pdf" download class="btn btn2-home"
           >Download CV</a
         >
       </div>
