Update website content2

--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
           </div>
         </div>
       </div>
-      <!-- -----------------------Experiences---------------------------------- -->
+      <!-- -----------------------Experiences---------------------------------- 
     <div id="services">
         <div class="container">
           <h1 class="sub-title">Experiences</h1>
           <div class="services-list">
             <div>
               <i class="fa-solid fa-mobile"></i>
-              <!-- <i class="fa-solid fa-crop"></i> -->
+              <!-- <i class="fa-solid fa-crop"></i> 
               <h2>VIEHGROUP </h2>
               <span>Appointment booking website developer</span>
                 <br/>21 June 2022  | Work from home
@@ -112,7 +112,7 @@
             </div>
            </div>
         </div>
-      </div>
+      </div>--->
       <!-- ---------------------------------portfolio-------------------------------- -->
     <div id="portfolio">
         <div class="container">
