--- a/index.html
+++ b/index.html
@@ -63,17 +63,14 @@
                   Skills
                 </p>
                 <p class="tab-links" onclick="opentab('education')">Education</p>
-                <p class="tab-links" onclick="opentab('experience')">
-                  Experience
-                </p>
+                <p class="tab-links" onclick="opentab('experience')">Experiences</p>
               </div>
               
               <div class="tab-contents active-tab" id="skills">
                 <ul>  
                   <li><span>Languages</span><br/><i class="fa-brands fa-python"></i>Python<i class="fa-solid fa-circle-c"></i>C Programming </li>
                   <li><span>Cloud</span><br /><i class="fa-brands fa-cloudversify "></i>AWS Cloud<i class="fa-solid fa-cloudversify"></i>Microsoft azure</li>
-                  <li><span>Tools</span><br /><i class="fa-brands fa-docker"></i>Docker<i class="fa-solid fa-jenkins"></i>Jenkins<i class="fa-solid fa-git"></i>Github </li>
-                  <li><span>Tools</span><br /><i class="fa-brands fa-codepen"></i>Visual Studio code<i class="fa-solid fa-code"></i>Intellij</li>
+                  <li><span>Tools</span><br /><i class="fa-brands fa-docker"></i>Docker<i class="fa-solid fa-jenkins"></i>Jenkins<i class="fa-solid fa-git"></i>Github<i class="fa-brands fa-codepen"></i>Visual Studio code<i class="fa-solid fa-code"></i>Intellij</li>
                   <li><span>Technology / Database</span><br /><i class="fa-sharp fa-solid fa-code"></i>HTML <i class="fa-brands fa-css3"></i> CSS<i class="fa-solid fa-database"></i> SQL</li>
                 </ul>
               </div>
@@ -103,16 +100,16 @@
           <div class="services-list">
             <div>
               <i class="fa-solid fa-mobile"></i>
-              <!-- <i class="fa-solid fa-crop"></i> 
+              <! <i class="fa-solid fa-crop"></i> 
               <h2>VIEHGROUP </h2>
               <span>Appointment booking website developer</span>
                 <br/>21 June 2022  | Work from home
                 <ul><li><p>Designing a website for appointment booking purpose of hospitals</p> </li></ul>
-              </p><!-- <a href="#">Learn more</a> -->
+              </p><!- <a href="#">Learn more</a> 
             </div>
            </div>
         </div>
-      </div>--->
+      </div>-->
       <!-- ---------------------------------portfolio-------------------------------- -->
     <div id="portfolio">
         <div class="container">
