--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
               </div>
               <div class="tab-contents" id="experience">
                 <ul>
-                  <li><span>VIEHGROUP ||Full stack Developer Intern</span></li></li>
-                  <li><span>TCL|| Network engineer</span></li></li>
+                  <li><span>VIEHGROUP || Full stack Developer Intern || F</span></li>
+                  <li><span>TCL || Network engineer</span></li>
               
                 </ul>
               </div>
@@ -109,7 +109,7 @@
             </div>
            </div>
         </div>
-      </div>-->
+      </div> -->
       <!-- ---------------------------------portfolio-------------------------------- -->
     <div id="portfolio">
         <div class="container">
