adding some new points

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
               </div>
               <div class="tab-contents" id="experience">
                 <ul>
-                  <li><span>VIEHGROUP || Full stack Developer Intern || F</span></li>
-                  <li><span>TCL || Network engineer</span></li>
-              
+                  <li><span>VIEHGROUP || Full stack Developer Intern ||  JAN, 2024 - MAY, 2024</span></li>
+                  <li><span>TCL || Network engineer || Feb, 2024 - Present</span></li>
                 </ul>
               </div>
               <div class="tab-contents" id="education">
@@ -116,10 +115,16 @@
           <h1 class="sub-title">Projects</h1>
           <div class="work-list">
             <div class="work">
+             <img src="Images/2.png" />
+              <div class="layer">
+                <h3>AWS-VPC-Public-Private-Architecture </h3>
+                <p> Built a public–private subnet architecture in AWS VPC with secure access controls.Automated infrastructure provisioning using Terraform .Secured database instances in private subnets with restricted access from web tier only</p>
+              </div> 
+            </div>
+            <div class="work">
              <img src="Images/stress_detection.jpg" />
               <div class="layer">
                 <h3>Stress level detection using EEG signal</h3>
-              
                 <p> We have applied different algorithms on ready made datasets from physionet and to check it's accuracy to estimate wheather the person is
                   having high stress or normal stress . In future, we are planning to take live signals from a person and then going to estimates it's state regarding
                   stress.
@@ -127,11 +132,10 @@
               </div> 
             </div>
             <div class="work">
-              <img src="Images/platform.jpg" />
+              <img src="Images/3.png" />
               <div class="layer">
-                <h3>Self leveling plateform</h3>
-                <p>We had simulated and tried to create a inverted steward platform that is, the one which can stabilize and hold upper plane constant even after any
-                  disturbance in the below plane.
+                <h3>Cloud native monitoring app </h3>
+                <p>Designed an end-to-end cloud-native application containerized using Docker and managed via Amazon ECR.Deployed and exposed the application on Amazon EKS using Kubernetes Deployments and Services. 
                 </p>
               </div>
             </div>
