--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -19,7 +19,7 @@
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#services">Experiences</a></li>
+            <li><a href="#experience">Experiences</a></li>
             <li><a href="#portfolio">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
             <i class="fas fa-times" onclick="closemenu()"></i>
@@ -63,9 +63,7 @@
                   Skills
                 </p>
                 <p class="tab-links" onclick="opentab('education')">Education</p>
-                <p class="tab-links" onclick="opentab('experience')">
-                  Experience
-                </p>
+                <p class="tab-links" onclick="opentab('experience')">Experience</p>
               </div>
               
               <div class="tab-contents active-tab" id="skills">
