--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#services">Experiences</a></li>
+            <li><a href="#experience">Experiences</a></li>
             <li><a href="#portfolio">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
             <i class="fas fa-times" onclick="closemenu()"></i>
@@ -76,7 +76,8 @@
               </div>
               <div class="tab-contents" id="experience">
                 <ul>
-                  <li><span>VIEHGROUP || Full stack Developer Intern ||  JAN, 2024 - MAY, 2024</span></li>
+                  <li><span>VIEHGROUP || Frontend Developer Intern ||  JUNE, 2023 - SEPT, 2023</span></li>
+                  <li><span>Global Infocloud || Full stack Developer Intern || JAN, 2024 - MAY, 2024</span></li>
                   <li><span>TCL || Network engineer || Feb, 2024 - Present</span></li>
                 </ul>
               </div>
